// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemDeclaredChoice Should display a CheckIcon when the input is checked 1`] = `
<label
  className="jsx-1500099655 kirk-item custom-class-name"
>
  <div
    className="jsx-1500099655 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1500099655 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1500099655 kirk-item-rightAddon"
  >
    <input
      checked={true}
      disabled={false}
      name="name"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <svg
      aria-hidden={true}
      className="jsx-1043659059 jsx-59167708 kirk-icon"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        className="jsx-1043659059 jsx-59167708"
        d="M6.5 12.5l4 4 8-8"
        fill="none"
        stroke="#FFF"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeMiterlimit="10"
        strokeWidth="1"
      />
    </svg>
  </div>
</label>
`;

exports[`ItemDeclaredChoice Should display a Loader when the component is in loading status 1`] = `
<label
  className="jsx-1500099655 kirk-item custom-class-name"
>
  <div
    className="jsx-1500099655 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1500099655 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1500099655 kirk-item-rightAddon"
  >
    <input
      checked={false}
      disabled={true}
      name="name"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <div
      className="jsx-2765694959 kirk-loader"
      style={
        Object {
          "height": "24px",
          "width": "24px",
        }
      }
    >
      <svg
        aria-hidden={true}
        className="jsx-2358291114 kirk-icon spinning"
        height={24}
        viewBox="0 0 66 66"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <circle
          className="jsx-2358291114"
          cx="33"
          cy="33"
          fill="none"
          r="30"
          stroke="#5DD167"
        />
      </svg>
    </div>
  </div>
</label>
`;

exports[`ItemDeclaredChoice Should forward its props to the Item component 1`] = `
<label
  className="jsx-1500099655 kirk-item custom-class-name"
>
  <div
    className="jsx-1500099655 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1500099655 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1500099655 kirk-item-rightAddon"
  >
    <input
      checked={false}
      disabled={false}
      name="name"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <svg
      aria-hidden={true}
      className="jsx-2358291114 kirk-icon thin"
      height={24}
      viewBox="0 0 66 66"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        className="jsx-2358291114"
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="#00AFF5"
      />
    </svg>
  </div>
</label>
`;
